# langgraph-customer-support-automation

./: README.md
aws-cdk-infrastructure/: cdk.context.json  cdk.json  package.json  pnpm-lock.yaml
aws-cdk-infrastructure/lib/: agentic-assistant-compute-stack.ts  agentic-assistant-stack.ts
aws-cdk-infrastructure/lib/constructs/shared/networking/: vpc.ts
aws-cdk-infrastructure/scripts/: deploy.sh  seed_order_tracking.js
langgraph-workflow/: pyproject.toml
langgraph-workflow/src/agent/: __init__.py  client.py  knowledge_base.py  llm.py  nodes.py  prompts.py  state.py  tools.py  workflow.py
langgraph-workflow/src/api/: main.py  routes.py
langgraph-workflow/src/utils/: __init__.py  auth.py  email_processor.py  gmail_service.py  history_tracker.py
mcp-server/: .dockerignore  Dockerfile  main.py  pyproject.toml
mcp-server/src/: server.py
mcp-server/src/config/: settings.py
mcp-server/src/services/: __init__.py  knowledge_base.py  tracking.py
mcp-server/src/tools/: __init__.py  knowledge_tools.py  tracking_tools.py
